# gocti

./: .gitignore  .golangci.yaml  .golangci.yml  .pre-commit-config.yaml  CHANGELOG.md  LICENSE.txt  Makefile  README.md  create.go  delete.go  docker-compose.env  docker-compose.yml  errors.go  go.mod  go.sum  gocti.go  gocti_internal_test.go  list.go  options.go  read.go
api/: api_test.go  create.go  create_test.go  decode.go  decode_internal_test.go  decode_test.go  delete.go  errors.go  list.go  list_test.go  parse.go  parse_internal_test.go  read.go  read_test.go  types.go
entity/: entity_test.go  opencti_attack_pattern.go  opencti_campaign.go  opencti_case_incident.go  opencti_case_rfi.go  opencti_case_rft.go  opencti_channel.go  opencti_course_of_action.go  opencti_data_component.go  opencti_data_source.go  opencti_event.go  opencti_external_reference.go  opencti_feedback.go  opencti_grouping.go  opencti_identity.go  opencti_incident.go  opencti_indicator.go  opencti_infrastructure.go  opencti_intrusion_set.go  opencti_kill_chain_phase.go  opencti_label.go  opencti_language.go  opencti_location.go  opencti_malware.go  opencti_malware_analysis.go  opencti_marking_definition.go  opencti_narrative.go  opencti_note.go  opencti_observed_data.go  opencti_opinion.go  opencti_report.go  opencti_stix_core_object.go  opencti_stix_core_relationship.go  opencti_stix_cyber_observable.go  opencti_stix_domain_object.go  opencti_task.go  (+6 more)
tools/gocti_type_generator/: README.md  pyproject.toml
tools/gocti_type_generator/gocti_type_generator/: entity.py  main.py  type.py  utils.py
(+149 files in other folders)
